[gd_scene load_steps=39 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://graphics/island.png" type="Texture" id=2]
[ext_resource path="res://Stand.gd" type="Script" id=3]
[ext_resource path="res://graphics/stand.png" type="Texture" id=4]
[ext_resource path="res://sfx/Cash Register Cha Ching-SoundBible.com-184076484.wav" type="AudioStream" id=5]
[ext_resource path="res://graphics/boje.png" type="Texture" id=6]
[ext_resource path="res://SpawnAreas.gd" type="Script" id=7]
[ext_resource path="res://Mowe/Mowe.tscn" type="PackedScene" id=8]
[ext_resource path="res://Piranha/Piranha.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://graphics/water.png" type="Texture" id=11]
[ext_resource path="res://hud/theme.tres" type="Theme" id=12]
[ext_resource path="res://HUD.gd" type="Script" id=13]
[ext_resource path="res://sfx/button.wav" type="AudioStream" id=14]
[ext_resource path="res://sfx/sea.ogg" type="AudioStream" id=15]
[ext_resource path="res://sfx/upgrade.wav" type="AudioStream" id=16]
[ext_resource path="res://hud/Pause.gd" type="Script" id=17]
[ext_resource path="res://hud/button/normal.png" type="Texture" id=18]
[ext_resource path="res://hud/button/retire.pressed.png" type="Texture" id=19]
[ext_resource path="res://hud/connection_ii/ConnectionII.tres" type="DynamicFont" id=20]
[ext_resource path="res://sfx/fanfare.wav" type="AudioStream" id=21]
[ext_resource path="res://sfx/applause.wav" type="AudioStream" id=22]
[ext_resource path="res://Water.gd" type="Script" id=23]
[ext_resource path="res://JukeBox.gd" type="Script" id=24]
[ext_resource path="res://sfx/12Mornings.ogg" type="AudioStream" id=25]
[ext_resource path="res://sfx/LazyDay.ogg" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 384, 120 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.556863, 0.823529, 0.470588, 0.560784 )

[sub_resource type="StyleBoxTexture" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 4.0
content_margin_bottom = 4.0
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/retire_normal.png-808e963da9b514ef28d3acaa44a758cd.stex"

[sub_resource type="StyleBoxTexture" id=7]
content_margin_left = 8.0
content_margin_right = 8.0
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=8]
content_margin_left = 8.0
content_margin_right = 8.0
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.972549, 0.537255, 0.792157 )

[sub_resource type="Animation" id=11]
resource_name = "win"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 384, -140 ), Vector2( 384, 110 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("fanfare")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("applause")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2125, 600 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Level" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="island" type="Sprite" parent="Level"]
position = Vector2( 352, 141 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Stand" type="Node2D" parent="Level"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="stand" type="Sprite" parent="Level/Stand"]
position = Vector2( 327, 104 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Level/Stand"]
position = Vector2( 326, 98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Stand/Area2D"]
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Stand"]
position = Vector2( 356, 127 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Stand/StaticBody2D"]
position = Vector2( 1, 0 )
polygon = PoolVector2Array( -65, 4, -65, -6, -69, -7, -68, -13, -55, -17, -18, -19, 51, -19, 69, -17, 71, 56, -13, 58, -42, 50, -63, 11 )

[node name="kaching" type="AudioStreamPlayer" parent="Level/Stand"]
stream = ExtResource( 5 )
bus = "sound"

[node name="Barriers" type="Node2D" parent="Level"]

[node name="Left" type="Position2D" parent="Level/Barriers"]
position = Vector2( -600, 133 )

[node name="Sprite" type="Sprite" parent="Level/Barriers/Left"]
position = Vector2( 0, 2 )
z_index = -5
texture = ExtResource( 6 )

[node name="Righ" type="Position2D" parent="Level/Barriers"]
position = Vector2( 115, 135 )

[node name="Sprite2" type="Sprite" parent="Level/Barriers/Righ"]
z_index = -5
texture = ExtResource( 6 )

[node name="SpawnAreas" type="Node2D" parent="Level"]
script = ExtResource( 7 )

[node name="Top" type="Area2D" parent="Level/SpawnAreas"]
position = Vector2( -270, 190 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/SpawnAreas/Top"]
position = Vector2( 0, 120 )
shape = SubResource( 2 )

[node name="Bottom" type="Area2D" parent="Level/SpawnAreas"]
position = Vector2( -270, 430 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/SpawnAreas/Bottom"]
position = Vector2( 0, 130 )
shape = SubResource( 2 )

[node name="CheckTimer" type="Timer" parent="Level/SpawnAreas"]
wait_time = 5.0
autostart = true

[node name="Mowen" type="Node2D" parent="Level"]
editor/display_folded = true

[node name="Mowe" parent="Level/Mowen" instance=ExtResource( 8 )]
position = Vector2( 258, 6 )

[node name="Mowe2" parent="Level/Mowen" instance=ExtResource( 8 )]
position = Vector2( 132, 37 )

[node name="Mowe4" parent="Level/Mowen" instance=ExtResource( 8 )]
position = Vector2( 3, 30 )

[node name="Mowe5" parent="Level/Mowen" instance=ExtResource( 8 )]
position = Vector2( -144, 60 )

[node name="Mowe3" parent="Level/Mowen" instance=ExtResource( 8 )]
position = Vector2( 215, 86 )

[node name="Piranha" type="Node2D" parent="Level"]

[node name="Piranha" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -6, 333 )

[node name="Piranha5" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -564, 356 )

[node name="Piranha7" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -303, 393 )

[node name="Piranha11" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -287, 162 )

[node name="Piranha12" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( 72, 171 )

[node name="Piranha16" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( 159, 149 )

[node name="Piranha17" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -41, 238 )

[node name="Piranha13" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -138, 409 )

[node name="Piranha14" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -341, 572 )

[node name="Piranha15" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -630, 593 )

[node name="Piranha8" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -458, 493 )

[node name="Piranha9" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -106, 545 )

[node name="Piranha10" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( 304, 545 )

[node name="Piranha3" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -157, 230 )

[node name="Piranha6" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( -437, 215 )

[node name="Piranha4" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( 178, 215 )

[node name="Piranha2" parent="Level/Piranha" instance=ExtResource( 9 )]
position = Vector2( 149, 451 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 85, 126 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 400.5, 679.42 )
scale = Vector2( 490.625, 135.645 )
z_index = -1
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
position = Vector2( 400.5, 941.42 )
scale = Vector2( 490.625, 73.645 )
z_index = -1
texture = ExtResource( 11 )

[node name="HUD-Layer" type="CanvasLayer" parent="."]

[node name="HUD" type="MarginContainer" parent="HUD-Layer"]
anchor_right = 1.0
margin_bottom = 50.0
mouse_filter = 1
theme = ExtResource( 12 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 13 )

[node name="MoneyLabel" type="Label" parent="HUD-Layer/HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 42.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0 $"

[node name="MainBar" type="HBoxContainer" parent="HUD-Layer/HUD"]
editor/display_folded = true
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 48.0
size_flags_vertical = 0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD-Layer/HUD/MainBar"]
margin_right = 1004.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HUD-Layer/HUD/MainBar/HBoxContainer"]
margin_right = 844.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 3 )

[node name="Upgrades" type="Button" parent="HUD-Layer/HUD/MainBar/HBoxContainer"]
margin_left = 848.0
margin_right = 1004.0
margin_bottom = 38.0
text = "Buy Upgrades"

[node name="UgradeBar" type="HBoxContainer" parent="HUD-Layer/HUD"]
editor/display_folded = true
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 48.0
size_flags_vertical = 0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD-Layer/HUD/UgradeBar"]
margin_right = 1004.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_right = 194.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 3 )

[node name="Line" type="Button" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_left = 198.0
margin_right = 382.0
margin_bottom = 38.0
hint_tooltip = "Your Line lasts twice as long before it breaks."
text = "Fishling Line 150$"

[node name="Spinner" type="Button" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_left = 386.0
margin_right = 526.0
margin_bottom = 38.0
hint_tooltip = "Increases the Spinning Speed by 100%"
text = "Spinner 150$"

[node name="Motor" type="Button" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_left = 530.0
margin_right = 656.0
margin_bottom = 38.0
hint_tooltip = "Navigate faster through the Tides - for only 199$!"
text = "Motor 200$"

[node name="Sinker" type="Button" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_left = 660.0
margin_right = 788.0
margin_bottom = 38.0
hint_tooltip = "Can hold 5 fish instead of only 3"
text = "Sinker 200$"

[node name="Storage" type="Button" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_left = 792.0
margin_right = 938.0
margin_bottom = 38.0
hint_tooltip = "Your boat will hold 10 fish instead of only 5. Amazing!"
text = "Storage 300$"

[node name="BackButton" type="Button" parent="HUD-Layer/HUD/UgradeBar/HBoxContainer"]
margin_left = 942.0
margin_right = 1004.0
margin_bottom = 38.0
text = "Back"

[node name="Sounds" type="Node" parent="HUD-Layer/HUD"]

[node name="Click" type="AudioStreamPlayer" parent="HUD-Layer/HUD/Sounds"]
stream = ExtResource( 14 )
bus = "sound"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HUD-Layer/HUD/Sounds"]
stream = ExtResource( 15 )
volume_db = 5.0
autoplay = true
bus = "sound"

[node name="Upgrade" type="AudioStreamPlayer" parent="HUD-Layer/HUD/Sounds"]
stream = ExtResource( 16 )
bus = "sound"

[node name="Pause" type="PopupPanel" parent="HUD-Layer"]
pause_mode = 2
editor/display_folded = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -126.5
margin_right = 109.0
margin_bottom = 126.5
theme = ExtResource( 12 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 17 )

[node name="MarginContainer" type="MarginContainer" parent="HUD-Layer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="HUD-Layer/Pause/MarginContainer"]
margin_left = 30.0
margin_top = 20.0
margin_right = 188.0
margin_bottom = 203.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD-Layer/Pause/MarginContainer/CenterContainer"]
margin_right = 158.0
margin_bottom = 183.0
alignment = 1

[node name="Label" type="Label" parent="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 47.0
text = "PAUSE
"
align = 1

[node name="Sound" type="Button" parent="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 158.0
margin_bottom = 81.0
custom_styles/normal = SubResource( 5 )
text = "Sound on/off"

[node name="Music" type="Button" parent="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 158.0
margin_bottom = 115.0
custom_styles/normal = SubResource( 5 )
text = "Music on/off"

[node name="Restart" type="Button" parent="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 158.0
margin_bottom = 149.0
custom_styles/normal = SubResource( 5 )
text = "Restart"

[node name="Continue" type="Button" parent="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 158.0
margin_bottom = 183.0
custom_styles/normal = SubResource( 5 )
text = "Continue"

[node name="RETIRE" type="Button" parent="HUD-Layer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 346.0
margin_top = 58.0
margin_right = 498.0
margin_bottom = 96.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 20 )
text = "RETIRE (2000 §$)"

[node name="WinPanel" type="Panel" parent="HUD-Layer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = -140.0
margin_right = 128.0
margin_bottom = -12.0
rect_min_size = Vector2( 256, 128 )
theme = ExtResource( 12 )
custom_styles/panel = SubResource( 10 )

[node name="CenterContainer" type="CenterContainer" parent="HUD-Layer/WinPanel"]
margin_right = 256.0
margin_bottom = 128.0
rect_min_size = Vector2( 256, 128 )

[node name="Label" type="Label" parent="HUD-Layer/WinPanel/CenterContainer"]
margin_left = 28.0
margin_top = 28.0
margin_right = 228.0
margin_bottom = 100.0
text = "Congratulations!

You won the game!"
align = 1

[node name="fanfare" type="AudioStreamPlayer" parent="HUD-Layer/WinPanel"]
stream = ExtResource( 21 )

[node name="applause" type="AudioStreamPlayer" parent="HUD-Layer/WinPanel"]
stream = ExtResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD-Layer/WinPanel"]
anims/win = SubResource( 11 )

[node name="Water" type="Area2D" parent="."]
visible = false
space_override = 1
gravity = 112.92
linear_damp = 10.0
angular_damp = 10.0
collision_layer = 1025
collision_mask = 1025
script = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
position = Vector2( 512, 735.66 )
shape = SubResource( 12 )

[node name="JukeBox" type="Node" parent="."]
script = ExtResource( 24 )

[node name="Song1" type="AudioStreamPlayer" parent="JukeBox"]
stream = ExtResource( 25 )
bus = "music"

[node name="Song2" type="AudioStreamPlayer" parent="JukeBox"]
stream = ExtResource( 26 )
bus = "music"

[connection signal="money_collected" from="Level/Stand" to="." method="_on_Stand_money_collected"]
[connection signal="body_entered" from="Level/Stand/Area2D" to="Level/Stand" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Level/SpawnAreas/CheckTimer" to="Level/SpawnAreas" method="_on_CheckTimer_timeout"]
[connection signal="button_up" from="HUD-Layer/HUD/MainBar/HBoxContainer/Upgrades" to="HUD-Layer/HUD" method="_on_Upgrades_button_up"]
[connection signal="button_up" from="HUD-Layer/HUD/UgradeBar/HBoxContainer/Line" to="HUD-Layer/HUD" method="_on_Line_button_up"]
[connection signal="button_up" from="HUD-Layer/HUD/UgradeBar/HBoxContainer/Spinner" to="HUD-Layer/HUD" method="_on_Spinner_button_up"]
[connection signal="button_up" from="HUD-Layer/HUD/UgradeBar/HBoxContainer/Motor" to="HUD-Layer/HUD" method="_on_Motor_button_up"]
[connection signal="button_up" from="HUD-Layer/HUD/UgradeBar/HBoxContainer/Sinker" to="HUD-Layer/HUD" method="_on_Sinker_button_up"]
[connection signal="button_up" from="HUD-Layer/HUD/UgradeBar/HBoxContainer/Storage" to="HUD-Layer/HUD" method="_on_Storage_button_up"]
[connection signal="button_up" from="HUD-Layer/HUD/UgradeBar/HBoxContainer/BackButton" to="HUD-Layer/HUD" method="_on_BackButton_button_up"]
[connection signal="button_up" from="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer/Sound" to="HUD-Layer/Pause" method="_on_Sound_button_up"]
[connection signal="button_up" from="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer/Music" to="HUD-Layer/Pause" method="_on_Music_button_up"]
[connection signal="button_up" from="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer/Restart" to="HUD-Layer/Pause" method="_on_Restart_button_up"]
[connection signal="button_up" from="HUD-Layer/Pause/MarginContainer/CenterContainer/VBoxContainer/Continue" to="HUD-Layer/Pause" method="_on_Continue_button_up"]
[connection signal="pressed" from="HUD-Layer/RETIRE" to="." method="_on_RETIRE_pressed"]
[connection signal="body_entered" from="Water" to="Water" method="_on_Water_body_entered"]
[connection signal="body_exited" from="Water" to="Water" method="_on_Water_body_exited"]
[connection signal="finished" from="JukeBox/Song1" to="JukeBox" method="_on_Song1_finished"]
[connection signal="finished" from="JukeBox/Song2" to="JukeBox" method="_on_Song2_finished"]
